<resources>
    <string name="app_name" translatable="false">My Dialer</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="add_to_contact">Add to contact</string>
    <string name="send_sms">Send SMS</string>
    <string name="gift">Gift</string>
    <string name="internet">Internet</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="voice">Voice</string>
    <string name="light" translatable="false">Light</string>
    <string name="send_call_me_back">Send Call Me Back</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="send_gift">Send Gift</string>
    <string name="night_internet_package">Night Internet Package</string>
    <string name="daily_internet_package">Daily Internet Package</string>
    <string name="weekly_internet_package">Weekly Internet Package</string>
    <string name="monthly_internet_package">Monthly Internet Package</string>
    <string name="daily_sms">Daily SMS</string>
    <string name="weekly_sms">Weekly SMS</string>
    <string name="monthly_sms">Monthly SMS</string>
    <string name="night_voice_package">Night Voice Package</string>
    <string name="daily_voice_package">Daily Voice Package</string>
    <string name="monthly_voice_package">Monthly Voice Package</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="send">Send</string>
    <string name="enter_birr">Enter Birr</string>
    <string name="please_enter_valid_number">Please enter valid number !</string>
    <string name="enter_a_name_or_number">Enter a name or number</string>
    <string name="menu">Menu</string>

    <string name="dark_theme" translatable="false">Dark Theme</string>
    <string name="light_theme" translatable="false">Light Theme</string>
    <string name="custom_theme" translatable="false">Custom Theme</string>
    <string name="check_your_balance">Check your balance</string>
    <string name="recharge_your_phone">Recharge your phone</string>
    <string name="self_voice_package">Self Voice Package</string>
    <string name="self_internet_package">Self Internet Package</string>
    <string name="self_sms_package">Self SMS Package</string>
    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="change_language">Change Language</string>
    <string name="about">About</string>
    <string name="english">English</string>
    <string name="change">CHANGE</string>
    <string name="cancel">Cancel</string>
    <string name="important">Important:</string>
    <string name="after_changing_language_pull_down_to_refresh"> After changing language pull down to refresh</string>
    <string name="please_choose_language">Please choose language</string>
    <string name="back_pressed">Touch again to exit</string>
    <string name="amharic">Amharic</string>
    <string name="service" translatable="false">This service records popups sent by your mobile operatior,and saves them in MyDialer App.It is absolutely safe to use</string>
    <string name="unnamed">Unnamed</string>
    <string name="weekly_voice_package">Weekly Voice Package</string>
    <string name="weekend_internet_package">Weekend Internet Package</string>
    <string name="favorites" translatable="false">Favorites</string>
    <string name="common">Common</string>
    <string name="premium">Premium</string>
    <string name="premium_limited_internet_package">Premium Limited Internet Package</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="night_mode">Night mode</string>
    <string name="affan_oromo">Affan Oromo</string>
    <string name="tigrigna">Tigrigna</string>
    <string name="geez">Geez</string>
    <string name="packages">Packages</string>
    <string name="more">More</string>
    <string name="want_to_transfer">Are you sure you want to transfer</string>
    <string name="yes">YES</string>
    <string name="No">NO</string>
    <string name="please_enter_birr">Please enter amount of Birr !!</string>
    <string name="was_added_to_fav"> was added to favorites</string>
    <string name="removed_from_fav"> removed from favorites</string>
    <string name="sure_to_send_call_me">Are you sure you want to send call me back to :</string>
    <string name="birr">Birr to</string>
    <string name="borrow_service">Borrow Service</string>
    <string name="borrow_air_time">Borrow air time</string>
    <string name="more_services">More Services</string>
    <string name="_10_service_fee_on_borrowed_amount_chargeable_on_next_topup">10% Service fee on borrowed amount chargeable on next topup</string>
    <string name="do_u_want_buy_package">Do you want buy package?</string>
    <string name="light_mode">Light mode</string>
    <string name="royal_mode">Royal mode</string>
    <string name="you_must_accept_this_permission_to_use_our_app">You must accept this permission to use our app</string>
    <string name="knatnaelaadane_gmail_com">knatnaelaadane@gmail.com</string>

</resources>
