<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:cardElevation="10dp"
    app:cardCornerRadius="0dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/language"
                android:textColor="?attr/textcolor"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                />



        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/language_eng"
                android:text="@string/english"
                android:textColor="?attr/textcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

            <RadioButton
                android:id="@+id/language_amh"
                android:text="@string/amharic"
                android:textColor="?attr/textcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <RadioButton
                android:id="@+id/language_oro"
                android:text="Affan Oromo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <RadioButton
                android:id="@+id/language_tig"
                android:text="ትግርኛ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />




        </RadioGroup>

        <LinearLayout
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/important"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/after_changing_language_pull_down_to_refresh"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>