<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



    <TextView
        android:textStyle="bold"
        android:textColor="?attr/textcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        />


    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/language_eng"
                    android:text="@string/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    />

                <RadioButton
                    android:id="@+id/language_amh"
                    android:text="@string/amharic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    />

                <RadioButton
                    android:id="@+id/language_oro"
                    android:text="@string/affan_oromo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    />

                <RadioButton
                    android:id="@+id/language_tig"
                    android:text="@string/tigrigna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    />


                <RadioButton
                    android:id="@+id/language_gez"
                    android:text="@string/geez"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    />




            </RadioGroup>

            <LinearLayout
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="8dp">



                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginTop="68dp"
                    android:text="Pro"
                    android:textSize="18sp"
                    android:layout_width="56dp"
                    android:textAlignment="center"
                    android:background="@drawable/text_round"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    android:text="Pro"
                    android:textSize="18sp"
                    android:background="@drawable/text_round"
                    android:layout_width="56dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    android:text="Pro"
                    android:textSize="18sp"
                    android:background="@drawable/text_round"
                    android:layout_width="56dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </RelativeLayout>




    </android.support.v7.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="?attr/textcolor"
        android:text="@string/theme"
        android:layout_marginTop="8dp"
        />


    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <Switch
                android:id="@+id/mySwitch"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:textColor="?attr/textcolor"
                />




        </LinearLayout>


    </android.support.v7.widget.CardView>


    <TextView
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:text="Pro"
        android:textSize="18sp"
        android:background="@drawable/text_round"
        android:layout_width="56dp"
        android:textAlignment="center"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="?attr/cardBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <Switch
                android:id="@+id/royal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Royal"
                android:textColor="?attr/textcolor"
                />

            <Switch
                android:id="@+id/dark"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dark"
                android:textColor="?attr/textcolor"
                />


        </LinearLayout>


    </android.support.v7.widget.CardView>

    </LinearLayout>

    </ScrollView>

</LinearLayout>