<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="410dp"
        android:layout_marginBottom="4dp"
        android:background="?attr/backgroundColor"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="Contact Name"
            android:textColor="?attr/textcolor"
            android:textSize="24sp"
            android:textStyle="bold" />




        <TextView
            android:id="@+id/dialog_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:text="Phone Number"
            android:textColor="?attr/textcolor"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btn_callMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:background="?attr/cardBackground"
            android:drawableLeft="@drawable/money"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/call_me_back"
            android:padding="20dp"
            android:text="@string/send_call_me_back"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="22sp"
            tools:ignore="MissingPrefix"
            tools:targetApi="M" />

        <Button
            android:id="@+id/btn_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:background="?attr/cardBackground"
            android:drawableLeft="@drawable/transfer"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/money"
            android:padding="20dp"
            android:text="@string/transfer_money"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:background="?attr/cardBackground"
            android:drawableLeft="@drawable/gift"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/gift"
            android:padding="20dp"
            android:text="@string/send_gift"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/textcolor"
            android:textSize="22sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/text_round_add"
        android:padding="10dp"
        android:visibility="invisible"
        app:layout_constraintLeft_creator="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/text_round_fav"
            android:padding="10dp"
            android:visibility="visible"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_star_border_black_24dp"
            android:layout_alignParentRight="true" />


    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>